# comix

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
comix/: __init__.py  container.py  metadata.py  tools.py
tests/: conftest.py  test_container.py  test_tools.py
tests/data/: Stupendous.Man.01.Vigilant.Watch.cbz  Stupendous.Man.02.cbr
