[metadata]
name = comix
version = attr: comix.__version__
description = Change content of CBZ/CBR/PDF comic book files, convert, extract images and edit metadata.
long_description = file: README.md, LICENSE
keywords = comic, book, cbz, cbr, pdf, comicrack
license = MIT
author = Dragan Petrovic
author_email = pesnik i zapisnicar at gmail dot com
url = https://github.com/zapisnicar/comix
classifiers =
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.7
install_requires =
    Pillow
    progressbar2
    PyMuPDF
    unrar
